--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="">
+    <form action="index.html" method="POST">
         <input type="text" name="email" id="">
         <input type="password" name="password" id="">
         <button>Login</button>
